pid control of wheel synchronization working

--- a/ESD2-firmware/web_server/templates/index.html
+++ b/ESD2-firmware/web_server/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Tornado WebSocket Control</title>
+    <title>Zoomhog</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -107,7 +107,7 @@
     </script>
 </head>
 <body>
-    <h1>Tornado WebSocket Control</h1>
+    <h1>Zoomhog</h1>
 
     <div id="status">
         Motor Status: <span id="motorStatus" class="label">Unknown</span><br>
